probando manejo de archivos serializados sin obtener parametros aun

--- a/.gitignore
+++ b/.gitignore
@@ -17405,3 +17405,116 @@ target/
 /target
 /target
 /target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
