refazctorizando codigo logico

--- a/.gitignore
+++ b/.gitignore
@@ -17518,3 +17518,1158 @@ target/
 /target
 /target
 /target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
