--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -17,21 +17,11 @@
 	</servlet-mapping>
 	
 	<servlet>
-		<servlet-name>LoginServlet</servlet-name>
-		<servlet-class>LoginServlet</servlet-class>
+		<servlet-name>UsersAdminServlet</servlet-name>
+		<servlet-class>UsersAdminServlet</servlet-class>
 	</servlet>
 	<servlet-mapping>
-		<servlet-name>LoginServlet</servlet-name>
-		<url-pattern>/LoginServlet</url-pattern>
-	</servlet-mapping>
-	
-	<servlet>
-		<servlet-name>SignUpServlet</servlet-name>
-		<servlet-class>SignUpServlet</servlet-class>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>SignUpServlet</servlet-name>
-		<url-pattern>/SignUpServlet</url-pattern>
-	</servlet-mapping>
-	
+		<servlet-name>UsersAdminServlet</servlet-name>
+		<url-pattern>/UsersAdminServlet</url-pattern>
+	</servlet-mapping>	
 </web-app>
